// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OakInlineBanner matches snapshot for banner with title 1`] = `
.c0 {
  padding: 1rem;
  background: #e3e9fb;
  border: 0.063rem solid;
  border-color: #a0b6f2;
  border-radius: 0.375rem;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c2 {
  position: relative;
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c5 {
  position: relative;
  width: 2rem;
  min-width: 2rem;
  height: 2rem;
  min-height: 2rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c7 {
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c11 {
  margin-top: 0.75rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c14 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16 {
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c22 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  color: transparent;
  background: transparent;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c24 {
  position: absolute;
  top: 0rem;
  width: 100%;
  height: 100%;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  -webkit-filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  object-fit: contain;
}

.c15 {
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 0.75rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0.25rem;
}

.c17 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0rem;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c13 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c25 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c19 {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  text-align: left;
  font-family: unset;
  outline: none;
  font-family: --var(google-font),Lexend,sans-serif;
  color: transparent;
}

.c19:disabled {
  pointer-events: none;
  cursor: default;
}

.c20 {
  display: inline-block;
  position: relative;
}

.c20:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: transparent;
}

.c20:hover:not(:active) [data-icon-for="button"] img {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
}

.c20:active {
  color: transparent;
}

.c20:disabled {
  color: transparent;
}

.c18 > :first-child:focus-visible .shadow {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c18 > :first-child:hover .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%);
}

.c18 > :first-child:active .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%), 0.25rem 0.25rem 0 rgba(87,87,87,100%);
}

.c18 > :first-child:disabled .icon-container {
  background: transparent;
}

.c18 > :first-child:hover .icon-container {
  background: #222222;
}

.c18 > :first-child:active .icon-container {
  background: transparent;
}

.c12 {
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #222222;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c12:visited {
  color: #575757;
}

.c12:active {
  color: #222222;
}

.c12[disabled] {
  cursor: not-allowed;
  color: #808080;
}

@media (hover:hover) {
  .c12:hover,
  .c12:visited:hover {
    color: #222222;
  }
}

<div
  className="c0 c1"
  data-testid="oak-inline-banner"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        data-testid="inline-banner-icon"
      >
        <img
          alt="info"
          className="c6"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1709052869/icons/Icon_Info_vsx3xi.svg"
          style={
            {
              "bottom": 0,
              "color": "transparent",
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c7 c8"
    >
      <h1
        className="c9"
        data-testid="inline-banner-title"
      >
        Information
      </h1>
      <div
        className="c10"
        data-testid="inline-banner-message"
      >
        Lorem ipsum dolor sit amet consectetur. Arcu proin rhoncus eget aliquet.
      </div>
      <div
        className="c11"
      >
        <a
          className="c12"
        >
          <span
            className="c13"
          >
            Link
          </span>
          <div
            className="c14 "
          >
            <img
              alt="chevron-right"
              className="c15"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style={
                {
                  "bottom": 0,
                  "color": "transparent",
                  "height": "100%",
                  "left": 0,
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </div>
        </a>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c16 c17 c18"
      >
        <button
          aria-label="Dismiss banner"
          className="c19 c20"
          data-testid="inline-banner-close-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c4 c21"
          >
            <div
              className="c22 c23 icon-container"
            >
              <div
                className="c24 shadow"
              />
              <div
                className="c14"
                data-icon-for="button"
              >
                <img
                  alt="cross"
                  className="c6"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699895179/icons/xigimrbivcaxt4omxamp.svg"
                  style={
                    {
                      "bottom": 0,
                      "color": "transparent",
                      "height": "100%",
                      "left": 0,
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
            <span
              className="c25"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OakInlineBanner matches snapshot for large variant banner 1`] = `
.c0 {
  padding: 1.5rem;
  background: #e3e9fb;
  border: 0.063rem solid;
  border-color: #a0b6f2;
  border-radius: 0.375rem;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c2 {
  position: relative;
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c5 {
  position: relative;
  width: 2.5rem;
  min-width: 2.5rem;
  height: 2.5rem;
  min-height: 2.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c7 {
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c10 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c11 {
  margin-top: 0.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c14 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c16 {
  position: absolute;
  top: 0rem;
  right: 0rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c17 {
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  color: transparent;
  background: transparent;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c25 {
  position: absolute;
  top: 0rem;
  width: 100%;
  height: 100%;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  -webkit-filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  object-fit: contain;
}

.c15 {
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 0.75rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 1rem;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0rem;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1.25rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c13 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c26 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c20 {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  text-align: left;
  font-family: unset;
  outline: none;
  font-family: --var(google-font),Lexend,sans-serif;
  color: transparent;
}

.c20:disabled {
  pointer-events: none;
  cursor: default;
}

.c21 {
  display: inline-block;
  position: relative;
}

.c21:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: transparent;
}

.c21:hover:not(:active) [data-icon-for="button"] img {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
}

.c21:active {
  color: transparent;
}

.c21:disabled {
  color: transparent;
}

.c19 > :first-child:focus-visible .shadow {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c19 > :first-child:hover .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%);
}

.c19 > :first-child:active .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%), 0.25rem 0.25rem 0 rgba(87,87,87,100%);
}

.c19 > :first-child:disabled .icon-container {
  background: transparent;
}

.c19 > :first-child:hover .icon-container {
  background: #222222;
}

.c19 > :first-child:active .icon-container {
  background: transparent;
}

.c12 {
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #222222;
}

.c12:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c12:visited {
  color: #575757;
}

.c12:active {
  color: #222222;
}

.c12[disabled] {
  cursor: not-allowed;
  color: #808080;
}

@media (hover:hover) {
  .c12:hover,
  .c12:visited:hover {
    color: #222222;
  }
}

<div
  className="c0 c1"
  data-testid="oak-inline-banner"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        data-testid="inline-banner-icon"
      >
        <img
          alt="info"
          className="c6"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1709052869/icons/Icon_Info_vsx3xi.svg"
          style={
            {
              "bottom": 0,
              "color": "transparent",
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c7 c8"
    >
      <h1
        className="c9"
        data-testid="inline-banner-title"
      >
        Information
      </h1>
      <div
        className="c10"
        data-testid="inline-banner-message"
      >
        Lorem ipsum dolor sit amet consectetur. Arcu proin rhoncus eget aliquet.
      </div>
      <div
        className="c11"
      >
        <a
          className="c12"
        >
          <span
            className="c13"
          >
            Link
          </span>
          <div
            className="c14 "
          >
            <img
              alt="chevron-right"
              className="c15"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style={
                {
                  "bottom": 0,
                  "color": "transparent",
                  "height": "100%",
                  "left": 0,
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </div>
        </a>
      </div>
    </div>
    <div
      className="c16"
    >
      <div
        className="c17 c18 c19"
      >
        <button
          aria-label="Dismiss banner"
          className="c20 c21"
          data-testid="inline-banner-close-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c4 c22"
          >
            <div
              className="c23 c24 icon-container"
            >
              <div
                className="c25 shadow"
              />
              <div
                className="c14"
                data-icon-for="button"
              >
                <img
                  alt="cross"
                  className="c6"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699895179/icons/xigimrbivcaxt4omxamp.svg"
                  style={
                    {
                      "bottom": 0,
                      "color": "transparent",
                      "height": "100%",
                      "left": 0,
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
            <span
              className="c26"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`OakInlineBanner matches snapshot for simple banner without title 1`] = `
.c0 {
  padding: 1rem;
  background: #e3e9fb;
  border: 0.063rem solid;
  border-color: #a0b6f2;
  border-radius: 0.375rem;
  border-style: solid;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c2 {
  position: relative;
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c4 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c5 {
  position: relative;
  width: 2rem;
  min-width: 2rem;
  height: 2rem;
  min-height: 2rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c7 {
  width: 100%;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c9 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 300;
  font-size: 1rem;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.005rem;
  -moz-letter-spacing: -0.005rem;
  -ms-letter-spacing: -0.005rem;
  letter-spacing: -0.005rem;
}

.c12 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  min-height: 1.5rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c14 {
  position: relative;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c20 {
  position: relative;
  width: 1.5rem;
  min-width: 1.5rem;
  height: 1.5rem;
  color: transparent;
  background: transparent;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c22 {
  position: absolute;
  top: 0rem;
  width: 100%;
  height: 100%;
  border-radius: 6.25rem;
  font-family: --var(google-font),Lexend,sans-serif;
}

.c6 {
  -webkit-filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  filter: invert(10%) sepia(1%) saturate(236%) hue-rotate(314deg) brightness(95%) contrast(91%);
  object-fit: contain;
}

.c13 {
  object-fit: contain;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 0.75rem;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 0.25rem;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 0rem;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  font-family: --var(google-font),Lexend,sans-serif;
}

.c23 {
  font-family: --var(google-font),Lexend,sans-serif;
  font-weight: 600;
  font-size: 1rem;
  line-height: 1.25rem;
  -webkit-letter-spacing: 0.0115rem;
  -moz-letter-spacing: 0.0115rem;
  -ms-letter-spacing: 0.0115rem;
  letter-spacing: 0.0115rem;
}

.c17 {
  background: none;
  color: inherit;
  border: none;
  padding: 0;
  font: inherit;
  cursor: pointer;
  text-align: left;
  font-family: unset;
  outline: none;
  font-family: --var(google-font),Lexend,sans-serif;
  color: transparent;
}

.c17:disabled {
  pointer-events: none;
  cursor: default;
}

.c18 {
  display: inline-block;
  position: relative;
}

.c18:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
  color: transparent;
}

.c18:hover:not(:active) [data-icon-for="button"] img {
  -webkit-filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
  filter: invert(98%) sepia(98%) saturate(0%) hue-rotate(328deg) brightness(102%) contrast(102%);
}

.c18:active {
  color: transparent;
}

.c18:disabled {
  color: transparent;
}

.c16 > :first-child:focus-visible .shadow {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c16 > :first-child:hover .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%);
}

.c16 > :first-child:active .shadow {
  box-shadow: 0.125rem 0.125rem 0 rgba(255,229,85,100%), 0.25rem 0.25rem 0 rgba(87,87,87,100%);
}

.c16 > :first-child:disabled .icon-container {
  background: transparent;
}

.c16 > :first-child:hover .icon-container {
  background: #222222;
}

.c16 > :first-child:active .icon-container {
  background: transparent;
}

.c10 {
  display: inline;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  outline: none;
  border-radius: 0.375rem;
  padding: 0.25rem;
  margin: -0.25rem;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font: inherit;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  cursor: pointer;
  color: #222222;
}

.c10:focus-visible {
  box-shadow: 0 0 0 0.125rem rgba(255,229,85,100%), 0 0 0 0.3rem rgba(87,87,87,100%);
}

.c10:visited {
  color: #575757;
}

.c10:active {
  color: #222222;
}

.c10[disabled] {
  cursor: not-allowed;
  color: #808080;
}

@media (hover:hover) {
  .c10:hover,
  .c10:visited:hover {
    color: #222222;
  }
}

<div
  className="c0 c1"
  data-testid="oak-inline-banner"
>
  <div
    className="c2 c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
        data-testid="inline-banner-icon"
      >
        <img
          alt="info"
          className="c6"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          onError={[Function]}
          onLoad={[Function]}
          src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1709052869/icons/Icon_Info_vsx3xi.svg"
          style={
            {
              "bottom": 0,
              "color": "transparent",
              "height": "100%",
              "left": 0,
              "objectFit": undefined,
              "objectPosition": undefined,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "width": "100%",
            }
          }
        />
      </div>
    </div>
    <div
      className="c7 c8"
    >
      <div
        className="c9"
        data-testid="inline-banner-message"
      >
        Lorem ipsum dolor sit amet consectetur. Arcu proin rhoncus eget aliquet.
      </div>
      <div
        className="c4"
      >
        <a
          className="c10"
        >
          <span
            className="c11"
          >
            Link
          </span>
          <div
            className="c12 "
          >
            <img
              alt="chevron-right"
              className="c13"
              data-nimg="fill"
              decoding="async"
              loading="lazy"
              onError={[Function]}
              onLoad={[Function]}
              src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1707752509/icons/vk9xxxhnsltsickom6q9.svg"
              style={
                {
                  "bottom": 0,
                  "color": "transparent",
                  "height": "100%",
                  "left": 0,
                  "objectFit": undefined,
                  "objectPosition": undefined,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                  "width": "100%",
                }
              }
            />
          </div>
        </a>
      </div>
    </div>
    <div
      className="c4"
    >
      <div
        className="c14 c15 c16"
      >
        <button
          aria-label="Dismiss banner"
          className="c17 c18"
          data-testid="inline-banner-close-button"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="c4 c19"
          >
            <div
              className="c20 c21 icon-container"
            >
              <div
                className="c22 shadow"
              />
              <div
                className="c12"
                data-icon-for="button"
              >
                <img
                  alt="cross"
                  className="c6"
                  data-nimg="fill"
                  decoding="async"
                  loading="lazy"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://res.cloudinary.com/mock-cloudinary-cloud/image/upload/v1699895179/icons/xigimrbivcaxt4omxamp.svg"
                  style={
                    {
                      "bottom": 0,
                      "color": "transparent",
                      "height": "100%",
                      "left": 0,
                      "objectFit": undefined,
                      "objectPosition": undefined,
                      "position": "absolute",
                      "right": 0,
                      "top": 0,
                      "width": "100%",
                    }
                  }
                />
              </div>
            </div>
            <span
              className="c23"
            />
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
